--- a/main.ini
+++ b/main.ini
@@ -3,17 +3,18 @@
 ; 値は、例え空白を含むものでも、二重引用符で囲まずに指定してください。
 [PATH]
 ; VLC の実行ファイルのパスを二重引用符で囲まずに指定します。
-; 既定値は vlc ですが、環境変数に VLC を設定していない場合はこの既定値は機能しません。
+; 既定値はシステムの環境変数 %PROGRAMFILES%,%PROGRAMFILES(X86)% が示すフォルダー内にインストールされた VLC を参照し、
+; いずれかに VLC の実行ファイルが存在していればそのパスを、そうでない場合は vlc が用いられます。
 VLC=/
 ; VLC で再生するファイルのパスを二重引用符で囲まずに指定します。
 ; 既定値はありません。再生ファイルはバッチファイルにドラッグアンドドロップしたり、引数付きで実行して指定することもできます。
 ; その場合、この設定ファイルの指定は無視されます。
 INPUT=
 [PLAYBACK]
-; VLC で使用するインターフェースの名前を指定します。
+; VLC で使用するインターフェースの名前を指定します。既定値は VLC の通常の GUI を示す qt です。
 INTERFACE=/
 ; VLC で有効化するインターフェースの名前を指定します。複数指定する場合 , で区切ってください。
-; このインターフェースはバックグラウンドで稼動します。
+; 既定値は http,oldrc です。この設定で指定したインターフェースはバックグラウンドで稼動します。
 BACKGROUND_INTERFACE=/
 ; プレイリストのファイルをランダムで再生する場合は任意の値を指定してください。しない場合は空欄にしてください。
 RANDOM=1
@@ -28,11 +29,15 @@ AUTOPLAY=1
 PLAY_PRIOR_ONLY=1
 LIMIT_INSTANCE=1
 ; ブラウザー上で操作するクライアントを使用する場合、クライアントのアドレスのポート番号を指定してください。
-; 既定値は 8080 です。空欄の場合、クライアントを使用しません。
+; 既定値は 8080 です。空欄の場合、クライアントを起動しません。
 WEB_CLIENT_PORT=/
 [STREAM]
-PROTOCOL=http
-MUXER=ogg
-HOTNAME=
-PORT=8080
-PATH=
+STREAM_PROTOCOL=http
+STREAM_MUXER=ogg
+STREAM_HOTNAME=
+STREAM_PORT=8008
+STREAM_PATH=
+[CMD]
+; VLC の起動時のウィンドウの状態を指定します。0 の場合は通常、1 の場合は最小化、2 の場合は最大化の状態で起動します。
+; 既定値は 0 です。未指定の場合はコマンドプロンプトのコマンド start の既定の動作になります。
+CMD_WINDOW_STATE=1
