--- a/main.ini
+++ b/main.ini
@@ -34,7 +34,7 @@ WEB_CLIENT_PORT=/
 [STREAM]
 STREAM_PROTOCOL=http
 STREAM_MUXER=ogg
-STREAM_HOTNAME=
+STREAM_HOSTNAME=
 STREAM_PORT=8008
 STREAM_PATH=
 [CMD]
