--- a/main.ini
+++ b/main.ini
@@ -3,8 +3,7 @@
 ; 値は、例え空白を含むものでも、二重引用符で囲まずに指定してください。
 [PATH]
 ; VLC の実行ファイルのパスを二重引用符で囲まずに指定します。
-; 既定値はシステムの環境変数 %PROGRAMFILES%,%PROGRAMFILES(X86)% が示すフォルダー内にインストールされた VLC を参照し、
-; いずれかに VLC の実行ファイルが存在していればそのパスを、そうでない場合は vlc が用いられます。
+; 既定値はシステムの環境変数 %PROGRAMFILES%,%PROGRAMFILES(X86)% が示すいずれかのフォルダー内にインストールされた VLC です。
 VLC=/
 ; VLC で再生するファイルのパスを二重引用符で囲まずに指定します。
 ; 既定値はありません。再生ファイルはバッチファイルにドラッグアンドドロップしたり、引数付きで実行して指定することもできます。
